--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://codebyomar.ml/" />
     <meta name="description" content="Omar's Personal Portfolio Website" property="og:description">
     <meta name="description" content="/icons/desc.png" property="og:image">
-    <meta name="keywords" content="Omar, PortFolio, MasterPortfolio, Omar's Portfolio" />
+    <meta name="keywords" content="Omar Ahmed,omar ahmed, PortFolio, software,code, Omar's Portfolio" />
     <meta name="author" content="Omar" />
     <meta name="application-name" content="Omar's PortFolio" />
 
