--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
     <meta property="og:title" content="Omar Ahmed's Portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://codebyomar.ml/" />
-    <meta name="description" content="Omar's Personal Portfolio Website" property="og:description">
-    <meta name="description" content="/icons/desc.png" property="og:image">
+    <meta property="og:description" content="Omar's Personal Portfolio Website" />
+    <meta property="og:image" content="/icons/desc.png"/>
     <meta name="keywords" content="Omar Ahmed,omar ahmed, PortFolio, software,code, Omar's Portfolio" />
     <meta name="author" content="Omar" />
     <meta name="application-name" content="Omar's PortFolio" />
