add google search index verification tag

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <meta name="keywords" content="Omar Ahmed,omar ahmed, PortFolio, software,code, Omar's Portfolio" />
     <meta name="author" content="Omar" />
     <meta name="application-name" content="Omar's PortFolio" />
+    <meta name="google-site-verification" content="UYNMoOU-SRrk_PFnc8t-5FoNWcnmX7LJmlDQJ-XkVuQ" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/icons/apple-icon-60x60.png">
