edit social preview

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://codebyomar.ml/" />
   <meta property="og:description" content="Omar's Personal Portfolio Website" />
+  <meta property="og:image" content="/icons/desc.webp" />
   <meta property="og:image" content="/icons/desc.png" />
   <meta name="keywords" content="Omar Ahmed,omar ahmed, PortFolio, software,code, Omar's Portfolio" />
   <meta name="author" content="Omar" />
