--- a/public/index.html
+++ b/public/index.html
@@ -34,13 +34,13 @@
   <meta name="msapplication-TileImage" content="/icons/ms-icon-144x144.png">
   <meta name="theme-color" content="#000000">
 
-  <!--Adsense Advertisement-->
+  <!-- Adsense Advertisement
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script>
     (adsbygoogle = window.adsbygoogle || []).push({
       google_ad_client: "ca-pub-8856447829714090",
       enable_page_level_ads: true
-    });
+    }); -->
   </script>
   <script>
     if ('serviceWorker' in navigator) {
