--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="Omar's Portfolio" content="Portfolio content" />
   <meta property="og:title" content="Omar Ahmed's Portfolio" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://omarcodes.me/" />
+  <meta property="og:url" content="https://omarx.uk/" />
   <meta property="og:description" content="Omar's Personal Portfolio Website" />
   <meta property="og:image" content="/icons/desc.png" />
   <meta name="keywords" content="Omar Ahmed,omar ahmed, PortFolio, software,code, Omar's Portfolio" />
